updated styles for removing body scrollbar

--- a/assets/scss/css/main.css
+++ b/assets/scss/css/main.css
@@ -7,6 +7,15 @@
 
 body {
   min-width: 20rem;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+body::-webkit-scrollbar {
+  display: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 .me {
